--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
       "homepage": "http://leartgjoni.com"
     }
   ],
-  "version": "1.0.0",
+  "version": "2.2",
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
@@ -18,7 +18,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Lersoft\\LaravelThumbnail\\": "src"
+      "tranlongpc\\LaravelThumbnail\\": "src"
     }
   }
 }
